k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artisan-gem-works
  labels:
    istio-injection: enabled
